@@ -32,7 +32,7 @@ public interface JDIHelper {
         final VirtualMachine vm = ref.virtualMachine();
         final List<ReferenceType> referenceTypes = vm.classesByName(elementTypeName);
         if (referenceTypes.size() == 1)
-            return referenceTypes.get(0);
+            return referenceTypes.getFirst();
         return ref;
     }
     
